# bls-embedded

./: .gitignore  .gitmodules  README.md  \
bls/: Cargo.toml  bls-embedded.h  build_native.sh
bls/native/: Cargo.toml  bls-embedded.h
bls/src/: build.rs  error.rs  lib.rs
bls/src/bls/: keys.rs
bls/src/crypto_primitives/: keys.rs
bls/src/hash/: direct.rs  mod.rs
bls12_377/: .gitignore  COPYRIGHT  Cargo.toml  Makefile
bls12_377/asm/: Makefile  main.c
bls12_377/benches/: groups.rs
bls12_377/src/: fp.rs  fp2.rs  fp_asm.S  fp_asm.s  fp_mont.cpp  fp_mont.h  fpc.c  fpc.cpp  fq_asm.s  g1.rs  g2.rs  lib.rs  scalar.rs  util.rs
bls12_377/src/tests/: mod.rs
bls12_381/src/: lib.rs
bls_tester/: Cargo.toml
test_vec_gen/: Cargo.toml
test_vec_gen/src/: main.rs
