[package]
name = "bls_embedded"
version = "0.1.0"
authors = ["Michael Straka <mstraka@celo.org>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
bls12_381 = { path = "../bls12_381" }
libc = "0.2"
rand = "0.7"
blake2s_simd = "0.5.7"

[build-dependencies]
cbindgen = "^0.6.0"

[lib]
name = "bls_embedded"
path = "src/lib.rs"
crate-type = ["cdylib"]
