[package]
name = "bls_embedded"
version = "0.1.0"
authors = ["Michael Straka <mstraka@celo.org>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
bls12_377 = { path = "../bls12_377" }
libc = "0.2"

[build-dependencies]
cbindgen = "^0.6.0"

[lib]
name = "bls_embedded"
path = "src/lib.rs"
crate-type = ["staticlib"]
lto = true
opt-level = "s"

[features]
gen_header = []
