[package]
name = "bls_embedded"
version = "0.1.0"
authors = ["Michael Straka <mstraka@celo.org>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
bls12_377 = { path = "../bls12_377" }
libc = "0.2"

[dependencies.subtle]
version = "2.1"
default-features = false

[lib]
name = "bls_embedded"
path = "src/lib.rs"
crate-type = ["staticlib"]
opt-level = "s"

[features]
gen_header = []

[profile.dev]
panic= "abort"

[profile.release]
opt-level = 3
panic= "abort"
