[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Michael Straka <mstraka@celo.org>"]
description = "Implementation of the BLS12-377 pairing-friendly elliptic curve construction"
license = "MIT/Apache-2.0"
name = "bls12_377"
repository = "https://github.com/zkcrypto/bls12_381"
version = "0.0.0"
edition = "2018"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
overflow-checks = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[dependencies.subtle]
version = "2.1"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[features]
default = ["groups", "pairings"]
groups = []
pairings = ["groups"]
nightly = ["subtle/nightly"]
